# scrubterm

./: .gitignore  Cargo.toml  LICENSE  REEDME.md
src/: main.rs
